# naito

./: CMakeLists.txt  aes_armv8.cpp  main.cpp  naito_arm64.cpp  naito_arm64.h
benchmark/: CMakeLists.txt  benchmark.cpp  naito_benchmark.cpp
include/: naito_aesni.h  naito_arm64.h
src/: naito_aesni.cpp  naito_arm64.cpp
